autoheal-chart/templates/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-monitor
  template:
    metadata:
      labels:
        app: health-monitor
    spec:
      containers:
      - name: monitor
        image: amolkhetan/k8s-health-monitor:latest
        ports:
        - containerPort: 2112
---
apiVersion: v1
kind: Service
metadata:
  name: health-monitor
spec:
  selector:
    app: health-monitor

  ports:
  - protocol: TCP
    port: 80
    targetPort: 2112
